tinyml/tests/snapshots/corpus_tests__c0003_use_qualified__check.snap
---
source: tinyml/tests/corpus_tests.rs
expression: "check_snapshot(\"tests/fixtures/0003_use_qualified.ml\")"
---
check pending
Module {
    items: [
        UseDecl(
            Concrete {
                module: Qualified {
                    name: "A",
                    rest: Name {
                        name: "B",
                        span: Span {
                            start: 6,
                            end: 7,
                        },
                    },
                    span: Span {
                        start: 4,
                        end: 7,
                    },
                },
                members: [
                    Name {
                        name: "C",
                        span: Span {
                            start: 9,
                            end: 10,
                        },
                    },
                    Qualified {
                        name: "D",
                        rest: Name {
                            name: "E",
                            span: Span {
                                start: 14,
                                end: 15,
                            },
                        },
                        span: Span {
                            start: 12,
                            end: 15,
                        },
                    },
                ],
                span: Span {
                    start: 0,
                    end: 16,
                },
            },
        ),
        UseDecl(
            Wildcard {
                module: Name {
                    name: "list",
                    span: Span {
                        start: 21,
                        end: 25,
                    },
                },
                span: Span {
                    start: 17,
                    end: 27,
                },
            },
        ),
        LetDecl(
            Const {
                name: Name {
                    name: "x",
                    span: Span {
                        start: 33,
                        end: 34,
                    },
                },
                body: Literal {
                    value: Int(
                        "1",
                    ),
                    span: Span {
                        start: 37,
                        end: 38,
                    },
                },
                span: Span {
                    start: 29,
                    end: 38,
                },
            },
        ),
    ],
}
